kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hextris-service
spec:
  selector:
    app: hextris
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
