kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hextris-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hextris.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hextris-service
            port:
              number: 80
